--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -36,7 +36,7 @@ jobs:
           # Create basic directories needed for the build
           mkdir -p docs src/css static/img
 
-          # Create a package.json file without workspace references
+          # Create a package.json file
           echo '{
             "name": "kai-documentation",
             "version": "1.0.0",
@@ -142,210 +142,35 @@ jobs:
             <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" font-family="Arial" font-size="72" fill="white">KAI</text>
           </svg>' > static/img/logo.svg
 
-          # Create a script to generate the files
-          cat > create-docusaurus-files.js << 'EOF'
-const fs = require('fs');
-const path = require('path');
-
-// Create sidebars.js
-const sidebarsContent = `// Simple sidebars config without TypeScript annotations
-const sidebars = {
-  docs: [
-    {
-      type: 'category',
-      label: 'Introduction',
-      items: ['introduction'],
-    },
-    {
-      type: 'category',
-      label: 'Getting Started',
-      items: ['installation', 'configuration'],
-    },
-    {
-      type: 'category',
-      label: 'Features',
-      items: ['features-overview'],
-    },
-    {
-      type: 'category',
-      label: 'Prompts',
-      items: [
-        'prompt-library',
-        'prompt-abtesting-segmentation',
-        'prompt-advanced-features',
-        'prompt-management',
-        'prompt-success-tracking',
-      ],
-    },
-    {
-      type: 'category',
-      label: 'Deployment',
-      items: ['deployment-guide', 'kubernetes-architecture', 'cicd-pipeline'],
-    },
-    {
-      type: 'category',
-      label: 'Other',
-      items: ['admin-panel', 'queue-system', 'notification-webhook-system'],
-    },
-  ],
-};
-
-module.exports = sidebars;`;
-
-fs.writeFileSync('sidebars.js', sidebarsContent);
-console.log('Created sidebars.js');
-EOF
-
-          # Run the script to create the files
-          node create-docusaurus-files.js
-
-          # Update the script to also create docusaurus.config.js
-          cat > create-docusaurus-files.js << 'EOF'
-const fs = require('fs');
-const path = require('path');
-
-// Create sidebars.js
-const sidebarsContent = `// Simple sidebars config without TypeScript annotations
-const sidebars = {
-  docs: [
-    {
-      type: 'category',
-      label: 'Introduction',
-      items: ['introduction'],
-    },
-    {
-      type: 'category',
-      label: 'Getting Started',
-      items: ['installation', 'configuration'],
-    },
-    {
-      type: 'category',
-      label: 'Features',
-      items: ['features-overview'],
-    },
-    {
-      type: 'category',
-      label: 'Prompts',
-      items: [
-        'prompt-library',
-        'prompt-abtesting-segmentation',
-        'prompt-advanced-features',
-        'prompt-management',
-        'prompt-success-tracking',
-      ],
-    },
-    {
-      type: 'category',
-      label: 'Deployment',
-      items: ['deployment-guide', 'kubernetes-architecture', 'cicd-pipeline'],
-    },
-    {
-      type: 'category',
-      label: 'Other',
-      items: ['admin-panel', 'queue-system', 'notification-webhook-system'],
-    },
-  ],
-};
-
-module.exports = sidebars;`;
-
-// Create docusaurus.config.js
-const configContent = `// Simple config without TypeScript annotations
-const config = {
-  title: "KAI Documentation",
-  tagline: "Comprehensive documentation for the KAI project",
-  favicon: "img/favicon.ico",
-  url: "https://basilakis.github.io",
-  baseUrl: "/",
-  organizationName: "Basilakis",
-  projectName: "basilakis.github.io",
-  trailingSlash: false,
-  onBrokenLinks: "warn",
-  onBrokenMarkdownLinks: "warn",
-  i18n: {
-    defaultLocale: "en",
-    locales: ["en"],
-  },
-  presets: [
-    [
-      "classic",
-      {
-        docs: {
-          sidebarPath: "./sidebars.js",
-          routeBasePath: "/",
-        },
-        blog: false,
-        theme: {
-          customCss: "./src/css/custom.css",
-        },
-      },
-    ],
-  ],
-  themeConfig: {
-    navbar: {
-      title: "KAI Documentation",
-      logo: {
-        alt: "KAI Logo",
-        src: "img/logo.svg",
-      },
-      items: [
-        {
-          href: "https://github.com/Basilakis/kai",
-          label: "GitHub",
-          position: "right",
-        },
-      ],
-    },
-    footer: {
-      style: "dark",
-      links: [
-        {
-          title: "More",
-          items: [
-            {
-              label: "GitHub",
-              href: "https://github.com/Basilakis/kai",
-            },
-          ],
-        },
-      ],
-      copyright: \`Copyright © \${new Date().getFullYear()} KAI Project. Last updated: \${new Date().toISOString().split('T')[0]}. Built with Docusaurus.\`,
-    },
-  },
-};
-
-module.exports = config;`;
-
-// Write the files
-fs.writeFileSync('sidebars.js', sidebarsContent);
-fs.writeFileSync('docusaurus.config.js', configContent);
-
-console.log('Created sidebars.js and docusaurus.config.js');
-EOF
-
-          # Run the script to create the files
-          node create-docusaurus-files.js
-
-          cd ..
-
-      - name: Create placeholder files
+      - name: Generate config files
         run: |
-          # Create placeholder files for the sidebar
-          mkdir -p kai-docs-temp/docs
-
-          # Create a script to generate the markdown files
-          cat > create-markdown-files.js << 'EOF'
-const fs = require('fs');
-const path = require('path');
-
-// Ensure the docs directory exists
-const docsDir = path.join('kai-docs-temp', 'docs');
-if (!fs.existsSync(docsDir)) {
-  fs.mkdirSync(docsDir, { recursive: true });
-}
-
-// Create introduction.md
-const introContent = `---
+          cd kai-docs-temp
+          
+          # Create sidebars.js
+          node -e "
+            const fs = require('fs');
+            
+            const sidebarsContent = 'const sidebars = { docs: [ { type: \"category\", label: \"Introduction\", items: [\"introduction\"], }, { type: \"category\", label: \"Getting Started\", items: [\"installation\", \"configuration\"], }, { type: \"category\", label: \"Features\", items: [\"features-overview\"], }, { type: \"category\", label: \"Prompts\", items: [ \"prompt-library\", \"prompt-abtesting-segmentation\", \"prompt-advanced-features\", \"prompt-management\", \"prompt-success-tracking\", ], }, { type: \"category\", label: \"Deployment\", items: [\"deployment-guide\", \"kubernetes-architecture\", \"cicd-pipeline\"], }, { type: \"category\", label: \"Other\", items: [\"admin-panel\", \"queue-system\", \"notification-webhook-system\"], }, ], }; module.exports = sidebars;';
+            
+            fs.writeFileSync('sidebars.js', sidebarsContent);
+            console.log('Created sidebars.js');
+          "
+          
+          # Create docusaurus.config.js
+          node -e "
+            const fs = require('fs');
+            
+            const configContent = 'const config = { title: \"KAI Documentation\", tagline: \"Comprehensive documentation for the KAI project\", favicon: \"img/favicon.ico\", url: \"https://basilakis.github.io\", baseUrl: \"/\", organizationName: \"Basilakis\", projectName: \"basilakis.github.io\", trailingSlash: false, onBrokenLinks: \"warn\", onBrokenMarkdownLinks: \"warn\", i18n: { defaultLocale: \"en\", locales: [\"en\"], }, presets: [ [ \"classic\", { docs: { sidebarPath: \"./sidebars.js\", routeBasePath: \"/\", }, blog: false, theme: { customCss: \"./src/css/custom.css\", }, }, ], ], themeConfig: { navbar: { title: \"KAI Documentation\", logo: { alt: \"KAI Logo\", src: \"img/logo.svg\", }, items: [ { href: \"https://github.com/Basilakis/kai\", label: \"GitHub\", position: \"right\", }, ], }, footer: { style: \"dark\", links: [ { title: \"More\", items: [ { label: \"GitHub\", href: \"https://github.com/Basilakis/kai\", }, ], }, ], copyright: `Copyright © ${new Date().getFullYear()} KAI Project. Last updated: ${new Date().toISOString().split(\"T\")[0]}. Built with Docusaurus.`, }, }, }; module.exports = config;';
+            
+            fs.writeFileSync('docusaurus.config.js', configContent);
+            console.log('Created docusaurus.config.js');
+          "
+          
+          # Create placeholder markdown files
+          mkdir -p docs
+          
+          # Create introduction.md
+          echo '---
 id: introduction
 title: "Introduction to KAI"
 sidebar_label: "Introduction"
@@ -354,10 +179,10 @@ slug: /
 
 # Introduction to KAI
 
-Welcome to the KAI documentation. This documentation provides comprehensive information about the KAI platform, its features, and how to use it.`;
-
-// Create installation.md
-const installContent = `---
+Welcome to the KAI documentation.' > docs/introduction.md
+          
+          # Create installation.md
+          echo '---
 id: installation
 title: "Installation"
 sidebar_label: "Installation"
@@ -365,10 +190,10 @@ sidebar_label: "Installation"
 
 # Installation
 
-This page provides instructions for installing the KAI platform.`;
-
-// Create configuration.md
-const configContent = `---
+This page provides instructions for installing the KAI platform.' > docs/installation.md
+          
+          # Create configuration.md
+          echo '---
 id: configuration
 title: "Configuration"
 sidebar_label: "Configuration"
@@ -376,10 +201,10 @@ sidebar_label: "Configuration"
 
 # Configuration
 
-This page provides instructions for configuring the KAI platform.`;
-
-// Create features-overview.md
-const featuresContent = `---
+This page provides instructions for configuring the KAI platform.' > docs/configuration.md
+          
+          # Create features-overview.md
+          echo '---
 id: features-overview
 title: "Features Overview"
 sidebar_label: "Features Overview"
@@ -387,113 +212,24 @@ sidebar_label: "Features Overview"
 
 # Features Overview
 
-This page provides an overview of the features available in the KAI platform.`;
-
-// Write the files
-fs.writeFileSync(path.join(docsDir, 'introduction.md'), introContent);
-fs.writeFileSync(path.join(docsDir, 'installation.md'), installContent);
-fs.writeFileSync(path.join(docsDir, 'configuration.md'), configContent);
-fs.writeFileSync(path.join(docsDir, 'features-overview.md'), featuresContent);
-
-console.log('Created placeholder markdown files');
-EOF
-
-          # Run the script to create the markdown files
-          node create-markdown-files.js
+This page provides an overview of the features available in the KAI platform.' > docs/features-overview.md
 
       - name: Process readme files
         run: |
           mkdir -p kai-docs-temp/docs
           cd readme
-          # Add debug output to see what's happening
-          echo "Current directory: $(pwd)"
-          echo "Contents of current directory:"
-          ls -la
-          echo "Running process-readme-files.js..."
           node process-readme-files.js
-          echo "Process complete. Contents of kai-docs-temp/docs:"
-          ls -la ../kai-docs-temp/docs
-
-          # Create basic directory structure
-          mkdir -p ../kai-docs-temp/static/img
-
-          # Note: prompt-library.md is now created by the process-readme-files.js script
-
-
-          # Additional fix for any problematic files
+          
+          # Fix any problematic markdown files
           cd ../kai-docs-temp/docs
-
-          # Fix the specific problematic files directly
-          if [ -f "ai-ml/rag-system.md" ]; then
-            echo "Fixing ai-ml/rag-system.md..."
-
-            # Use sed to directly fix the front matter
-            sed -i '1,6s/title: RAG System: Architecture/title: "RAG System: Architecture/g' ai-ml/rag-system.md
-            sed -i '1,6s/sidebar_label: RAG System: Architecture/sidebar_label: "RAG System: Architecture/g' ai-ml/rag-system.md
-            sed -i '1,6s/Guide$/Guide"/g' ai-ml/rag-system.md
-
-            # Fix the syntax error around line 1039 (unexpected character)
-            # Use a simple sed command to remove the problematic line
-            sed -i '1039d' ai-ml/rag-system.md
-
-            # Show the result
-            echo "Fixed front matter:"
-            cat ai-ml/rag-system.md | head -5
-          fi
-
-          # Fix all files with a simpler approach
-          echo "Fixing all markdown files with potential YAML issues..."
-
-          # Add quotes around any title or sidebar_label containing a colon
           find . -name "*.md" -exec sed -i '1,6s/^title: \([^"]*\):\([^"]*\)$/title: "\1:\2"/g' {} \;
           find . -name "*.md" -exec sed -i '1,6s/^sidebar_label: \([^"]*\):\([^"]*\)$/sidebar_label: "\1:\2"/g' {} \;
-
-          # Remove all image references and fix specific issues
-          echo "Removing all image references and fixing specific issues..."
-
-          # Remove any line containing an image reference
           find . -name "*.md" -exec sed -i '/!\[.*\](.*)/d' {} \;
-
-          # Also remove any HTML img tags
           find . -name "*.md" -exec sed -i '/<img.*>/d' {} \;
-
-          # Fix the specific issue with prompt-management.md (material_type not defined)
-          if [ -f "other/prompt-management.md" ]; then
-            echo "Fixing other/prompt-management.md..."
-            # Remove any JavaScript code or references to material_type
-            sed -i 's/material_type/\"material_type\"/g' other/prompt-management.md
-            sed -i 's/{material_type}/material_type/g' other/prompt-management.md
-            # As a fallback, also remove any JSX/JavaScript code blocks
-            sed -i '/{:.*/d' other/prompt-management.md
-            sed -i '/```jsx/,/```/d' other/prompt-management.md
-            sed -i '/```javascript/,/```/d' other/prompt-management.md
-          fi
-
-          # Fix any other problematic files with simple sed commands
-          echo "Fixing any other problematic files..."
-
-          # Remove any lines with problematic angle bracket patterns
-          find . -name "*.md" -exec sed -i 's/<[0-9]\+:[0-9]\+>/REMOVED_PROBLEMATIC_TAG/g' {} \;
-
-          # Fix common JavaScript/JSX issues in all markdown files
-          echo "Fixing common JavaScript/JSX issues in all markdown files..."
-
-          # Remove any JSX/JavaScript code blocks that might cause issues
           find . -name "*.md" -exec sed -i '/```jsx/,/```/d' {} \;
           find . -name "*.md" -exec sed -i '/```javascript/,/```/d' {} \;
           find . -name "*.md" -exec sed -i '/```js/,/```/d' {} \;
-
-          # Remove any curly braces that might be interpreted as JSX expressions
           find . -name "*.md" -exec sed -i 's/{[^}]*}//g' {} \;
-
-          # Remove any HTML-like tags that might be interpreted as JSX components
-          find . -name "*.md" -exec sed -i 's/<[A-Z][^>]*>.*<\/[A-Z][^>]*>//g' {} \;
-
-          # Note: We're only removing image references, not the files themselves
-
-          # List all fixed files
-          echo "Files with titles containing colons:"
-          grep -l "title: \".*:.*\"" $(find . -name "*.md") || echo "None found"
 
       - name: Install Docusaurus dependencies
         run: |
@@ -503,77 +239,35 @@ EOF
       - name: Build Docusaurus site
         run: |
           cd kai-docs-temp
-          echo "Building Docusaurus site..."
           npx docusaurus build
 
-          echo "Build complete. Contents of build directory:"
-          ls -la build || echo "Build directory does not exist!"
-
-      - name: Archive build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: docusaurus-build
-          path: kai-docs-temp/build/
-          retention-days: 7
-
-      - name: Install GitHub CLI
+      - name: Create Pull Request
         run: |
-          echo "Installing GitHub CLI..."
+          # Install GitHub CLI
           curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
           sudo apt update
           sudo apt install gh
-
-      - name: Checkout target repository
-        uses: actions/checkout@v4
-        with:
-          repository: Basilakis/basilakis.github.io
-          token: ${{ secrets.DOCS_DEPLOY_TOKEN }}
-          path: target-repo
-
-      - name: Create Pull Request
-        run: |
-          # Generate a unique branch name
-          BRANCH_NAME="docs-update-$(date +%Y%m%d%H%M%S)"
-          echo "Branch name: $BRANCH_NAME"
-
-          # Create a new branch for the changes
+          
+          # Checkout target repository
+          git clone https://github.com/Basilakis/basilakis.github.io.git target-repo
           cd target-repo
+          
+          # Create a new branch
+          BRANCH_NAME="docs-update-$(date +%Y%m%d%H%M%S)"
           git checkout -b $BRANCH_NAME
-
+          
           # Copy the built files
-          echo "Removing existing files..."
           rm -rf * || true
-
-          echo "Copying built files..."
           cp -r ../kai-docs-temp/build/* .
-
-          echo "Contents after copying:"
-          ls -la
-
-          # Commit the changes
+          
+          # Commit and push
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-
-          echo "Adding files to git..."
           git add .
-
-          echo "Committing changes..."
           git commit -m "Deploy Documentation: ${{ github.event.inputs.deploy_message }}"
-
-          echo "Pushing branch..."
-          git push origin $BRANCH_NAME
-
-          echo "Creating pull request..."
-          # Create a pull request using GitHub CLI
+          git push https://x-access-token:${{ secrets.DOCS_DEPLOY_TOKEN }}@github.com/Basilakis/basilakis.github.io.git $BRANCH_NAME
+          
+          # Create PR
           gh auth login --with-token <<< "${{ secrets.DOCS_DEPLOY_TOKEN }}"
-
-          # Set PR body as a variable
-          PR_BODY="This PR was automatically created by the GitHub Actions workflow to update the documentation site. It includes updated documentation from the latest changes in the kai repository, triggered by a manual workflow run."
-
-          gh pr create \
-            --title "Deploy Documentation: ${{ github.event.inputs.deploy_message }}" \
-            --body "$PR_BODY" \
-            --repo Basilakis/basilakis.github.io \
-            --head $BRANCH_NAME \
-            --base gh-pages
+          gh pr create --title "Deploy Documentation: ${{ github.event.inputs.deploy_message }}" --body "This PR was automatically created by the GitHub Actions workflow to update the documentation site." --repo Basilakis/basilakis.github.io --head $BRANCH_NAME --base gh-pages
