--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -258,10 +258,23 @@ MDEOF
           sudo apt install gh
 
           # Checkout target repository
-          git clone https://github.com/Basilakis/basilakis.github.io.git target-repo
+          git clone https://x-access-token:${{ secrets.DOCS_DEPLOY_TOKEN }}@github.com/Basilakis/basilakis.github.io.git target-repo
           cd target-repo
 
-          # Create a new branch
+          # Check if gh-pages branch exists, if not create it
+          if ! git ls-remote --heads origin gh-pages | grep gh-pages; then
+            echo "Creating gh-pages branch as it doesn't exist"
+            git checkout --orphan gh-pages
+            git rm -rf .
+            echo "# KAI Documentation" > README.md
+            git add README.md
+            git commit -m "Initial gh-pages branch"
+            git push origin gh-pages
+          else
+            git checkout gh-pages || git checkout -b gh-pages origin/gh-pages
+          fi
+
+          # Create a new branch for the PR
           BRANCH_NAME="docs-update-$(date +%Y%m%d%H%M%S)"
           git checkout -b $BRANCH_NAME
 
@@ -269,13 +282,26 @@ MDEOF
           rm -rf * || true
           cp -r ../kai-docs-temp/build/* .
 
+          # Add .nojekyll file to disable Jekyll processing
+          touch .nojekyll
+
           # Commit and push
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
           git commit -m "Deploy Documentation: ${{ github.event.inputs.deploy_message }}"
-          git push https://x-access-token:${{ secrets.DOCS_DEPLOY_TOKEN }}@github.com/Basilakis/basilakis.github.io.git $BRANCH_NAME
+          git push origin $BRANCH_NAME
 
-          # Create PR
+          # Create PR using GitHub CLI
           gh auth login --with-token <<< "${{ secrets.DOCS_DEPLOY_TOKEN }}"
-          gh pr create --title "Deploy Documentation: ${{ github.event.inputs.deploy_message }}" --body "This PR was automatically created by the GitHub Actions workflow to update the documentation site." --repo Basilakis/basilakis.github.io --head $BRANCH_NAME --base gh-pages
+
+          # Set PR body as a variable
+          PR_BODY="This PR was automatically created by the GitHub Actions workflow to update the documentation site. It includes updated documentation from the latest changes in the kai repository, triggered by a manual workflow run."
+
+          # Create the PR
+          gh pr create \
+            --title "Deploy Documentation: ${{ github.event.inputs.deploy_message }}" \
+            --body "$PR_BODY" \
+            --repo Basilakis/basilakis.github.io \
+            --head $BRANCH_NAME \
+            --base gh-pages
